@@ -1,31 +1,32 @@
 /*
  * Licensed to the Apache Software Foundation (ASF) under one or more
- * contributor license agreements. See the NOTICE file distributed with
+ * contributor license agreements.  See the NOTICE file distributed with
  * this work for additional information regarding copyright ownership.
- * The ASF licenses this file to You under the Apache license, Version 2.0
+ * The ASF licenses this file to you under the Apache License, Version 2.0
  * (the "License"); you may not use this file except in compliance with
- * the License. You may obtain a copy of the License at
+ * the License.  You may obtain a copy of the License at
  *
  *      http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the license for the specific language governing permissions and
- * limitations under the license.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
 package org.apache.logging.log4j.core.appender.rolling;
+
+import java.io.File;
+import java.io.IOException;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 
 import org.apache.logging.log4j.core.LoggerContext;
 import org.apache.logging.log4j.core.appender.RollingFileAppender;
 import org.apache.logging.log4j.core.config.Configuration;
 import org.apache.logging.log4j.core.lookup.StrSubstitutor;
-import org.apache.logging.log4j.core.util.IOUtils;
 import org.junit.Assert;
 import org.junit.Test;
-
-import java.io.*;
-import java.nio.charset.StandardCharsets;
 
 public class RollingFileManagerTest {
 
@@ -39,13 +40,13 @@ public class RollingFileManagerTest {
         class CustomDirectFileRolloverStrategy extends AbstractRolloverStrategy implements DirectFileRolloverStrategy {
             final File file;
 
-            CustomDirectFileRolloverStrategy(File file, StrSubstitutor strSubstitutor) {
+            CustomDirectFileRolloverStrategy(final File file, final StrSubstitutor strSubstitutor) {
                 super(strSubstitutor);
                 this.file = file;
             }
 
             @Override
-            public String getCurrentFileName(RollingFileManager manager) {
+            public String getCurrentFileName(final RollingFileManager manager) {
                 return file.getAbsolutePath();
             }
 
@@ -55,7 +56,7 @@ public class RollingFileManagerTest {
             }
 
             @Override
-            public RolloverDescription rollover(RollingFileManager manager) throws SecurityException {
+            public RolloverDescription rollover(final RollingFileManager manager) throws SecurityException {
                 return null; // do nothing
             }
         }
@@ -79,9 +80,8 @@ public class RollingFileManagerTest {
                 Assert.assertEquals(file.getAbsolutePath(), manager.getFileName());
                 manager.writeToDestination(testContent.getBytes(StandardCharsets.US_ASCII), 0, testContent.length());
             }
-            try (final Reader reader = new InputStreamReader(new FileInputStream(file), StandardCharsets.US_ASCII)) {
-                Assert.assertEquals(testContent, IOUtils.toString(reader));
-            }
+            final String actualContents = Files.readString(file.toPath(), StandardCharsets.US_ASCII);
+            Assert.assertEquals(testContent, actualContents);
         }
     }
 }
