@@ -1,30 +1,29 @@
 /*
  * Licensed to the Apache Software Foundation (ASF) under one or more
- * contributor license agreements. See the NOTICE file distributed with
+ * contributor license agreements.  See the NOTICE file distributed with
  * this work for additional information regarding copyright ownership.
- * The ASF licenses this file to You under the Apache license, Version 2.0
+ * The ASF licenses this file to you under the Apache License, Version 2.0
  * (the "License"); you may not use this file except in compliance with
- * the License. You may obtain a copy of the License at
+ * the License.  You may obtain a copy of the License at
  *
  *      http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the license for the specific language governing permissions and
- * limitations under the license.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
 package org.apache.logging.log4j.core.layout;
 
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
-import java.util.Collections;
 import java.util.Map;
 import java.util.Objects;
 
 import org.apache.logging.log4j.Logger;
-import org.apache.logging.log4j.core.Layout;
 import org.apache.logging.log4j.core.LogEvent;
+import org.apache.logging.log4j.core.StringLayout;
 import org.apache.logging.log4j.core.config.Configuration;
 import org.apache.logging.log4j.core.config.plugins.PluginConfiguration;
 import org.apache.logging.log4j.plugins.PluginBuilderAttribute;
@@ -34,7 +33,7 @@ import org.apache.logging.log4j.util.Cast;
 /**
  * Abstract base class for Layouts.
  */
-public abstract class AbstractLayout implements Layout {
+public abstract class AbstractLayout implements StringLayout {
 
     private static final Charset DEFAULT_CHARSET = StandardCharsets.UTF_8;
 
@@ -160,7 +159,7 @@ public abstract class AbstractLayout implements Layout {
 
     @Override
     public Map<String, String> getContentFormat() {
-        return Collections.emptyMap();
+        return Map.of();
     }
 
     /**
@@ -198,10 +197,10 @@ public abstract class AbstractLayout implements Layout {
      * {@code AbstractStringLayout} provides various convenience methods to help with this:
      * </p>
      * <pre>{@code
-     * @Configurable(elementType = Layout.ELEMENT_TYPE, printObject = true)
-     * @Plugin("MyLayout")
+     * &#064;Category(Node.CATEGORY)
+     * &#064;Plugin(value = "MyLayout", elementType = Layout.ELEMENT_TYPE, printObject = true)
      * public final class MyLayout extends AbstractStringLayout {
-     *     @Override
+     *     &#064;Override
      *     public void encode(LogEvent event, ByteBufferDestination destination) {
      *         StringBuilder text = stringBuilderRecycler.acquire();
      *         try {
