@@ -1,18 +1,18 @@
 /*
  * Licensed to the Apache Software Foundation (ASF) under one or more
- * contributor license agreements. See the NOTICE file distributed with
+ * contributor license agreements.  See the NOTICE file distributed with
  * this work for additional information regarding copyright ownership.
- * The ASF licenses this file to You under the Apache license, Version 2.0
+ * The ASF licenses this file to you under the Apache License, Version 2.0
  * (the "License"); you may not use this file except in compliance with
- * the License. You may obtain a copy of the License at
+ * the License.  You may obtain a copy of the License at
  *
  *      http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the license for the specific language governing permissions and
- * limitations under the license.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
 package org.apache.logging.log4j.plugin.processor;
 
@@ -20,6 +20,7 @@ import java.io.BufferedWriter;
 import java.io.IOException;
 import java.io.OutputStreamWriter;
 import java.io.PrintWriter;
+import java.io.StringWriter;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
@@ -29,23 +30,25 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
+
 import javax.annotation.processing.AbstractProcessor;
 import javax.annotation.processing.Messager;
+import javax.annotation.processing.Processor;
 import javax.annotation.processing.RoundEnvironment;
 import javax.annotation.processing.SupportedAnnotationTypes;
 import javax.lang.model.SourceVersion;
 import javax.lang.model.element.AnnotationValue;
 import javax.lang.model.element.Element;
-import javax.lang.model.element.ElementVisitor;
 import javax.lang.model.element.Name;
 import javax.lang.model.element.TypeElement;
-import javax.lang.model.util.Elements;
 import javax.lang.model.util.SimpleElementVisitor8;
 import javax.tools.Diagnostic.Kind;
 import javax.tools.FileObject;
 import javax.tools.JavaFileObject;
 import javax.tools.StandardLocation;
 
+import aQute.bnd.annotation.Resolution;
+import aQute.bnd.annotation.spi.ServiceProvider;
 import org.apache.logging.log4j.LoggingException;
 import org.apache.logging.log4j.plugins.Configurable;
 import org.apache.logging.log4j.plugins.Namespace;
@@ -58,9 +61,14 @@ import org.apache.logging.log4j.util.Strings;
 import static java.nio.charset.StandardCharsets.UTF_8;
 
 /**
- * Annotation processor for pre-scanning Log4j 2 plugins.
+ * Annotation processor for pre-scanning Log4j plugins. This generates implementation classes extending
+ * {@link org.apache.logging.log4j.plugins.model.PluginService} with a list of {@link PluginEntry} instances
+ * discovered from plugin annotations. By default, this will use the most specific package name it can derive
+ * from where the annotated plugins are located in a subpackage {@code plugins}. The output base package name
+ * can be overridden via the {@code pluginPackage} annotation processor option.
  */
 @SupportedAnnotationTypes({"org.apache.logging.log4j.plugins.*", "org.apache.logging.log4j.core.config.plugins.*"})
+@ServiceProvider(value = Processor.class, resolution = Resolution.OPTIONAL)
 public class PluginProcessor extends AbstractProcessor {
 
     // TODO: this could be made more abstract to allow for compile-time and run-time plugin processing
@@ -78,9 +86,9 @@ public class PluginProcessor extends AbstractProcessor {
 
     @Override
     public boolean process(final Set<? extends TypeElement> annotations, final RoundEnvironment roundEnv) {
-        Map<String, String> options = processingEnv.getOptions();
+        final Map<String, String> options = processingEnv.getOptions();
         String packageName = options.get("pluginPackage");
-        Messager messager = processingEnv.getMessager();
+        final Messager messager = processingEnv.getMessager();
         messager.printMessage(Kind.NOTE, "Processing Log4j annotations");
         try {
             final Set<? extends Element> elements = roundEnv.getElementsAnnotatedWith(Plugin.class);
@@ -89,13 +97,17 @@ public class PluginProcessor extends AbstractProcessor {
                 return false;
             }
             messager.printMessage(Kind.NOTE, "Retrieved " + elements.size() + " Plugin elements");
-            List<PluginEntryMirror> list = new ArrayList<>();
+            final List<PluginEntry> list = new ArrayList<>();
             packageName = collectPlugins(packageName, elements, list);
+            messager.printMessage(Kind.NOTE, "Writing plugin metadata using base package " + packageName);
+            Collections.sort(list);
             writeClassFile(packageName, list);
             writeServiceFile(packageName);
             messager.printMessage(Kind.NOTE, "Annotations processed");
         } catch (final Exception ex) {
-            error(ex.getMessage());
+            var writer = new StringWriter();
+            ex.printStackTrace(new PrintWriter(writer));
+            error(writer.toString());
         }
         return false;
     }
@@ -104,33 +116,31 @@ public class PluginProcessor extends AbstractProcessor {
         processingEnv.getMessager().printMessage(Kind.ERROR, message);
     }
 
-    private String collectPlugins(String packageName, final Iterable<? extends Element> elements, List<PluginEntryMirror> list) {
-        boolean calculatePackage = packageName == null;
-        final Elements elementUtils = processingEnv.getElementUtils();
-        final ElementVisitor<PluginEntryMirror, Plugin> pluginVisitor = new PluginElementVisitor(elementUtils);
-        final ElementVisitor<Collection<PluginEntryMirror>, Plugin> pluginAliasesVisitor = new PluginAliasesElementVisitor(
-                elementUtils);
+    private String collectPlugins(String packageName, final Iterable<? extends Element> elements, final List<PluginEntry> list) {
+        final boolean calculatePackage = packageName == null;
+        final var pluginVisitor = new PluginElementVisitor();
+        final var pluginAliasesVisitor = new PluginAliasesElementVisitor();
         for (final Element element : elements) {
             final Plugin plugin = element.getAnnotation(Plugin.class);
             if (plugin == null) {
                 continue;
             }
-            final PluginEntryMirror entry = element.accept(pluginVisitor, plugin);
+            final var entry = element.accept(pluginVisitor, plugin);
             list.add(entry);
             if (calculatePackage) {
-                packageName = calculatePackage(elementUtils, element, packageName);
+                packageName = calculatePackage(element, packageName);
             }
             list.addAll(element.accept(pluginAliasesVisitor, plugin));
         }
         return packageName;
     }
 
-    private String calculatePackage(Elements elements, Element element, String packageName) {
-        Name name = elements.getPackageOf(element).getQualifiedName();
+    private String calculatePackage(Element element, String packageName) {
+        final Name name = processingEnv.getElementUtils().getPackageOf(element).getQualifiedName();
         if (name == null) {
             return null;
         }
-        String pkgName = name.toString();
+        final String pkgName = name.toString();
         if (packageName == null) {
             return pkgName;
         }
@@ -144,7 +154,7 @@ public class PluginProcessor extends AbstractProcessor {
         return commonPrefix(pkgName, packageName);
     }
 
-    private void writeServiceFile(String pkgName) throws IOException {
+    private void writeServiceFile(final String pkgName) throws IOException {
         final FileObject fileObject = processingEnv.getFiler().createResource(StandardLocation.CLASS_OUTPUT, Strings.EMPTY,
                 SERVICE_FILE_NAME);
         try (final PrintWriter writer = new PrintWriter(new BufferedWriter(new OutputStreamWriter(fileObject.openOutputStream(), UTF_8)))) {
@@ -152,21 +162,23 @@ public class PluginProcessor extends AbstractProcessor {
         }
     }
 
-    private void writeClassFile(String pkg, List<PluginEntryMirror> list) {
-        String fqcn = createFqcn(pkg);
+    private void writeClassFile(final String pkg, final List<PluginEntry> list) {
+        final String fqcn = createFqcn(pkg);
         try (final PrintWriter writer = createSourceFile(fqcn)) {
             writer.println("package " + pkg + ".plugins;");
             writer.println("");
+            writer.println("import aQute.bnd.annotation.Resolution;");
+            writer.println("import aQute.bnd.annotation.spi.ServiceProvider;");
             writer.println("import org.apache.logging.log4j.plugins.model.PluginEntry;");
             writer.println("import org.apache.logging.log4j.plugins.model.PluginService;");
             writer.println("");
+            writer.println("@ServiceProvider(value = PluginService.class, resolution = Resolution.OPTIONAL)");
             writer.println("public class Log4jPlugins extends PluginService {");
             writer.println("");
             writer.println("  private static final PluginEntry[] ENTRIES = new PluginEntry[] {");
-            int max = list.size() - 1;
+            final int max = list.size() - 1;
             for (int i = 0; i < list.size(); ++i) {
-                PluginEntryMirror mirror = list.get(i);
-                final PluginEntry entry = mirror.entry;
+                final PluginEntry entry = list.get(i);
                 writer.println("    PluginEntry.builder()");
                 writer.println(String.format("      .setKey(\"%s\")", entry.getKey()));
                 writer.println(String.format("      .setClassName(\"%s\")", entry.getClassName()));
@@ -191,9 +203,9 @@ public class PluginProcessor extends AbstractProcessor {
         }
     }
 
-    private PrintWriter createSourceFile(String fqcn) {
+    private PrintWriter createSourceFile(final String fqcn) {
         try {
-            JavaFileObject sourceFile = processingEnv.getFiler().createSourceFile(fqcn);
+            final JavaFileObject sourceFile = processingEnv.getFiler().createSourceFile(fqcn);
             return new PrintWriter(sourceFile.openWriter());
         } catch (IOException e) {
             throw new LoggingException("Unable to create Plugin Service Class " + fqcn, e);
@@ -202,16 +214,6 @@ public class PluginProcessor extends AbstractProcessor {
 
     private String createFqcn(String packageName) {
         return packageName + ".plugins.Log4jPlugins";
-    }
-
-    private static class PluginEntryMirror {
-        private final TypeElement element;
-        private final PluginEntry entry;
-
-        private PluginEntryMirror(final TypeElement element, final PluginEntry entry) {
-            this.element = element;
-            this.entry = entry;
-        }
     }
 
     private static String getNamespace(final TypeElement e) {
@@ -225,19 +227,25 @@ public class PluginProcessor extends AbstractProcessor {
                         .orElse(Plugin.EMPTY));
     }
 
+    private static PluginEntry configureNamespace(final TypeElement e, final PluginEntry.Builder builder) {
+        final Configurable configurable = e.getAnnotation(Configurable.class);
+        if (configurable != null) {
+            builder.setNamespace(Node.CORE_NAMESPACE)
+                    .setElementType(configurable.elementType().isEmpty() ? builder.getName() : configurable.elementType())
+                    .setDeferChildren(configurable.deferChildren())
+                    .setPrintable(configurable.printObject());
+        } else {
+            builder.setNamespace(getNamespace(e));
+        }
+        return builder.get();
+    }
+
     /**
      * ElementVisitor to scan the Plugin annotation.
      */
-    private static class PluginElementVisitor extends SimpleElementVisitor8<PluginEntryMirror, Plugin> {
-
-        private final Elements elements;
-
-        private PluginElementVisitor(final Elements elements) {
-            this.elements = elements;
-        }
-
+    private final class PluginElementVisitor extends SimpleElementVisitor8<PluginEntry, Plugin> {
         @Override
-        public PluginEntryMirror visitType(final TypeElement e, final Plugin plugin) {
+        public PluginEntry visitType(final TypeElement e, final Plugin plugin) {
             Objects.requireNonNull(plugin, "Plugin annotation is null.");
             String name = plugin.value();
             if (name.isEmpty()) {
@@ -246,22 +254,13 @@ public class PluginProcessor extends AbstractProcessor {
             final PluginEntry.Builder builder = PluginEntry.builder()
                     .setKey(name.toLowerCase(Locale.ROOT))
                     .setName(name)
-                    .setClassName(elements.getBinaryName(e).toString());
-            Configurable configurable = e.getAnnotation(Configurable.class);
-            if (configurable != null) {
-                builder.setNamespace(Node.CORE_NAMESPACE)
-                        .setElementType(configurable.elementType().isEmpty() ? name : configurable.elementType())
-                        .setDeferChildren(configurable.deferChildren())
-                        .setPrintable(configurable.printObject());
-            } else {
-                builder.setNamespace(getNamespace(e));
-            }
-            return new PluginEntryMirror(e, builder.get());
+                    .setClassName(processingEnv.getElementUtils().getBinaryName(e).toString());
+            return configureNamespace(e, builder);
         }
     }
 
-    private String commonPrefix(String str1, String str2) {
-        int minLength = Math.min(str1.length(), str2.length());
+    private String commonPrefix(final String str1, final String str2) {
+        final int minLength = Math.min(str1.length(), str2.length());
         for (int i = 0; i < minLength; i++) {
             if (str1.charAt(i) != str2.charAt(i)) {
                 if (i > 1 && str1.charAt(i-1) == '.') {
@@ -277,17 +276,14 @@ public class PluginProcessor extends AbstractProcessor {
     /**
      * ElementVisitor to scan the PluginAliases annotation.
      */
-    private static class PluginAliasesElementVisitor extends SimpleElementVisitor8<Collection<PluginEntryMirror>, Plugin> {
+    private final class PluginAliasesElementVisitor extends SimpleElementVisitor8<Collection<PluginEntry>, Plugin> {
 
-        private final Elements elements;
-
-        private PluginAliasesElementVisitor(final Elements elements) {
-            super(Collections.emptyList());
-            this.elements = elements;
+        private PluginAliasesElementVisitor() {
+            super(List.of());
         }
 
         @Override
-        public Collection<PluginEntryMirror> visitType(final TypeElement e, final Plugin plugin) {
+        public Collection<PluginEntry> visitType(final TypeElement e, final Plugin plugin) {
             final PluginAliases aliases = e.getAnnotation(PluginAliases.class);
             if (aliases == null) {
                 return DEFAULT_VALUE;
@@ -298,20 +294,12 @@ public class PluginProcessor extends AbstractProcessor {
             }
             final PluginEntry.Builder builder = PluginEntry.builder()
                     .setName(name)
-                    .setClassName(elements.getBinaryName(e).toString());
-            Configurable configurable = e.getAnnotation(Configurable.class);
-            if (configurable != null) {
-                builder.setNamespace(Node.CORE_NAMESPACE)
-                        .setElementType(configurable.elementType().isEmpty() ? name : configurable.elementType())
-                        .setDeferChildren(configurable.deferChildren())
-                        .setPrintable(configurable.printObject());
-            } else {
-                builder.setNamespace(getNamespace(e));
-            }
-            final Collection<PluginEntryMirror> entries = new ArrayList<>(aliases.value().length);
+                    .setClassName(processingEnv.getElementUtils().getBinaryName(e).toString());
+            configureNamespace(e, builder);
+            final Collection<PluginEntry> entries = new ArrayList<>(aliases.value().length);
             for (final String alias : aliases.value()) {
                 final PluginEntry entry = builder.setKey(alias.toLowerCase(Locale.ROOT)).get();
-                entries.add(new PluginEntryMirror(e, entry));
+                entries.add(entry);
             }
             return entries;
         }
